--- a/Pasteleria.html
+++ b/Pasteleria.html
@@ -24,7 +24,7 @@
             <ul class="menu-principal">
                 <li><a href="#inicio" class="activo">Inicio</a></li>
                 <li><a href="#menu">Menú</a></li>           
-                <li><a href="#nosotros">Nosotros</a></li>   
+                <li><a href="nosotros.html">Nosotros</a></li>  
                 <li><a href="#galeria">Galería</a></li>    
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
