Actualización general de la página

--- a/PlantillaDePagina-Veiner/apartado-galeria/index.html
+++ b/PlantillaDePagina-Veiner/apartado-galeria/index.html
@@ -29,7 +29,7 @@
             </ul>
             
             <div class="acciones-navegacion">
-                <a href="../Pasteleria.html#pedir" class="boton boton-pequeno boton-oscuro">
+                <a href="../apartado-pedir/index.html" class="boton boton-pequeno boton-oscuro">
                     <i class="fas fa-shopping-bag"></i> Pedir ahora
                 </a>
             </div>
