--- a/PlantillaDePagina-Veiner/Pasteleria.html
+++ b/PlantillaDePagina-Veiner/Pasteleria.html
@@ -53,6 +53,11 @@
                     <a href="apartado-contacto/contacto.html" class="boton boton-grande boton-transparente">
                         <i class="fas fa-map-marker-alt"></i> Visítanos
                     </a>
+                        <style>
+                            html {
+                                scroll-behavior: smooth;
+                            }
+                        </style>
                 </div>
             </div>
             <div class="imagen-hero">
