--- a/PlantillaDePagina-Veiner/apartado-menu/indexo.html
+++ b/PlantillaDePagina-Veiner/apartado-menu/indexo.html
@@ -15,9 +15,11 @@
     <nav class="barra-navegacion">
         <div class="contenedor navegacion-contenido">
             <div class="logo-cafe">
-                <i class="fas fa-coffee"></i>
-                <span>Café Delicia</span>
-                <span style="font-size: 0.8rem; margin-left: 6px; color: #5a3921;">🇬🇹 Guatemala</span>
+                <a href="../Pasteleria.html" style="text-decoration: none; color: inherit;">
+                    <i class="fas fa-birthday-cake"></i>
+                    <span>Pastelería Delicia</span>
+                    <span style="font-size: 0.8rem; margin-left: 6px; color: #5a3921;">🇬🇹 Guatemala</span>
+                </a>
             </div>
             <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
             <ul class="menu-principal">
