--- a/PlantillaDePagina-Veiner/apartado-nosotros/Index.html
+++ b/PlantillaDePagina-Veiner/apartado-nosotros/Index.html
@@ -19,8 +19,8 @@
         <div class="contenedor navegacion-contenido">
                 <div class="logo-cafe">
                 <a href="../Pasteleria.html" style="text-decoration: none; color: inherit;">
-                    <i class="fas fa-coffee"></i>
-                    <span>Café Delicia</span>
+                    <i class="fas fa-birthday-cake"></i>
+                    <span>Pastelería Delicia</span>
                     <span style="font-size: 0.8rem; margin-left: 6px; color: #5a3921;">🇬🇹 Guatemala</span>
                 </a>
             </div>
@@ -29,10 +29,10 @@
             
                 <ul class="menu-principal">
                 <li><a href="../Pasteleria.html">Inicio</a></li>
-                <li><a href="../Pasteleria.html#menu">Menú</a></li>           
-                <li><a href="Index.html" class="activo">Nosotros</a></li>   
-                <li><a href="../Pasteleria.html#galeria">Galería</a></li>    
-                <li><a href="../Pasteleria.html#contacto">Contacto</a></li>
+                <li><a href="../apartado-menu/indexo.html">Menú</a></li>
+                <li><a href="Index.html" class="activo">Nosotros</a></li>
+                <li><a href="../apartado-galeria/index.html">Galería</a></li>
+                <li><a href="../apartado-contacto/contacto.html">Contacto</a></li>
             </ul>
             
             <div class="acciones-navegacion">
