--- a/PlantillaDePagina-Veiner/apartado-galeria/index.html
+++ b/PlantillaDePagina-Veiner/apartado-galeria/index.html
@@ -124,5 +124,18 @@
         </div>
     </section>
 
+      <a href="../apartado-pedir/index.html" class="btn-pedir-flotante" aria-label="Pedir ahora">
+        <i class="fas fa-shopping-bag" aria-hidden="true"></i>
+    </a>  
+    
+    <!-- FOOTER -->
+<footer class="pie-pagina" id="contacto" role="contentinfo">
+  <div class="derechos-autor">
+    <div class="contenedor">
+      <p>&copy; 2023 Café Delicia. Todos los derechos reservados. | Diseño inspirado en plantilla Wix</p>
+    </div>
+  </div>
+</footer>   
+
 </body>
 </html>
